# rust-grimoire

./: .gitignore  .rustfmt.toml  CONTRIBUTING  README.md  run_grimoire.bash
_to_review/: index.html
_to_review/example_code/: Cargo.toml
_to_review/full_examples/read_a_single_character/: Cargo.toml
_to_review/full_examples/read_a_single_character/src/: old_2.rs
_to_review/old_example_code/: _sqlite_db_test.db3  svg-test-viewer.html
basic_logging_to_a_file/: Cargo.toml  README.neo
basic_logging_to_a_file/src/: logger.rs  main.rs
copy_file_list_from_to/: Cargo.toml  start-watcher
copy_file_list_from_to/src/: main.rs
embed_files_in_a_binary/: .gitignore  Cargo.toml
embed_files_in_a_binary/src/: main.rs
fuse_iterator_example/: Cargo.toml  _todo_post.neo
fuse_iterator_example/src/: main.rs
get_files_in_single_dir/: Cargo.toml  start-watcher
get_files_in_single_dir/src/: main.rs
get_files_in_tree_recursively/: start-watcher
get_files_in_tree_recursively/src/: main.rs
get_list_of_files_recursively/: Cargo.toml
get_list_of_files_recursively/src/: main.rs
html_parser/: Cargo.toml  README.md  post.neo  start-watcher
html_parser/src/: main.rs
key_value_store/: .ignore  Cargo.toml  post.neo  storage.redb
key_value_store/src/: cacher.rs  main.rs  original.rs
last_character_position/: Cargo.toml  README.neo  start-watcher
last_character_position/src/: last_position.rs  lib.rs  main.rs
last_character_position/tests/: mod.rs
link_maker/: .gitignore  .ignore  Cargo.toml  README.md  input.txt
link_maker/src/: cacher.rs  lib.rs  main.rs
log_to_file/: Cargo.toml  post.neo
log_to_file/src/: main.rs
log_to_stdout/: Cargo.toml  README.md  post.neo  start-watcher
log_to_stdout/src/: logger.rs  main.rs
log_to_stdout_and_file/: .ignore  Cargo.toml  README.md
log_to_stdout_and_file/src/: logger.rs  main.rs
logging_scaffold_with_custom_format/: Cargo.toml
logging_to_a_file_with_tracing/: Cargo.toml  _todo_post.neo
logging_with_tracing_subscriber/: .ignore  Cargo.toml  _todo_post.neo
lsp_tester/: .gitignore  .ignore  2025-06-23-01.json-lines  2025-06-23.json-lines  Cargo.toml  README.md  post.neo
lsp_tester/src/: lib.rs
minijinja_output_content_or_error/: Cargo.toml  start-watcher
multi_output_logging_scaffold_with_custom_format/: README.neo  post.neo
print_date_time_strings/: Cargo.toml
run_scripts_in_a_directory/: .ignore  Cargo.toml
rust_analyzer_lsp_completion_example/: Cargo.toml  _payload_examples.neo  _todo_post.neo  start-watcher
rust_analyzer_lsp_completion_example/src/: casts.rs  document_data.rs  init_logger.rs  lib.rs  main.rs  main_loop.rs  mem_docs.rs  server_capabilities.rs
rust_analyzer_lsp_completion_example/src/handlers/: completion.rs  handle_notification.rs  handle_request.rs  handle_response.rs  mod.rs  text_document_did_change.rs  unknown.rs  unknown_request.rs  unknown_response.rs
rust_analyzer_lsp_completion_example/src/helpers/: string_at_position.rs
rust_analyzer_lsp_completion_example/src/notification_handlers/: mod.rs  text_document_did_change.rs
rust_analyzer_lsp_completion_example/src/notifications/: cast.rs  did_change_text_document.rs  mod.rs  text_document_did_change.rs  unknown.rs
rust_analyzer_lsp_completion_example/src/request_handlers/: completion.rs  text_document_did_change.rs
rust_analyzer_lsp_completion_example/src/requests/: cast.rs  completion.rs  mod.rs  unknown.rs
rust_analyzer_lsp_completion_example/src/responses/: mod.rs  unknown.rs
rust_analyzer_lsp_completion_example/test-stuff/: log.2025-06-14.json-lines  nvim-check.lsptest
rust_analyzer_lsp_example/: .gitignore  .ignore  2025-06-16.json-lines  2025-06-23.json-lines  Cargo.toml  README.neo  _payload_examples.neo  _todo_post.neo
rust_analyzer_lsp_format_document/: .ignore  Cargo.toml  _todo_post.neo
site/: index.html
site/example_code/: .rustfmt.toml  Cargo.toml  start-single-test  start-tests  start-watcher
site/example_code/src/: add_value_to_vec_in_enum.rs  lib.rs  nom_parse_multiple_neopolitan_tags.rs  nom_parse_neopolitan_section_attributes.rs  nom_parse_paragraphs_separated_by_empty_lines.rs  nom_parse_test_v17.rs  sqlite_check_if_a_table_exists.rs
site/old_example_code/: Cargo.toml
site/old_example_code/minijinja_templates/: c.html
site/web_server_with_hot_reload/: Cargo.toml
site/web_server_with_hot_reload/_content/: alfa.html  charlie.html  index.html  ping.html
site/web_server_with_hot_reload/_site/: alfa.html  index.html  ping.html
site/web_server_with_hot_reload/reloading_web_server/: Cargo.toml
site/web_server_with_hot_reload/reloading_web_server/src/: _main_old_1.rs  main.rs
test_directory_runner/: Cargo.toml  README.md  README.neo  _todo_post.neo  post.neo
test_directory_runner_with_macros/: Cargo.toml  README.neo  start-watcher
tower_lsp_did_save/: Cargo.toml  README.neo  _todo_post.neo  post.neo  tmp.etxt
watch_a_folder_for_changes/: script.rs
(+113 files in other folders)
