[package]
name = "rust_analyzer_lsp_completion_example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
vfs = "0.12.1"
