[package]
name = "example_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
cmd_lib = "1.3.0"
dirs = "4.0.0"
duct = "0.13.6"
envvar = "0.1.3"
futures = "0.3.26"
keyring = "2.0.1"
logos = "0.12.1"
meilisearch-sdk = "0.22.0"
minijinja = "0.30.5"
nom = "7.1.3"
osascript = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
serde_yaml = "0.9.17"
svg = "0.13.0"
