[package]
name = "example_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
cmd_lib = "1.3.0"
dirs = "4.0.0"
duct = "0.13.6"
envvar = "0.1.3"
futures = "0.3.26"
image = "0.24.6"
imagesize = "0.11.0"
keyring = "2.0.1"
logos = "0.12.1"
meilisearch-sdk = "0.22.0"
minijinja = { version = "0.30.5", features = ['source'] }
nom = "7.1.3"
osascript = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
serde_yaml = "0.9.17"
svg = "0.13.0"
walkdir = "2"
html-escape = "0.2.13"
syntect = "5.0.0"
miette = "5.8.0"
watchexec = "2.3.0"
tokio = "1.28.0"
async-priority-channel = "0.1.0"
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
watchexec-events = "1.0.0"
sets = "1.2.0"
watchexec-signals = "1.0.0"
rusqlite = "0.29.0"
glob = "0.3.1"
regex = "1.8.1"
chrono = "0.4.24"
svix-ksuid = "0.7.0"
time = "0.3.21"
tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.28"
futures-channel = "0.3.28"
url = "2.3.1"
http = "0.2.9"


[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
