[workspace]
resolver = "2"
members = [
  "reloading_web_server"
]

[workspace.dependencies]
axum = "0.7.4"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tower-livereload = "0.9.1"
