[package]
name = "read_a_single_character"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
crossterm = "0.26.1"
dialoguer = "0.10.4"
enquirer = "0.6.1"
rui = "0.6.1"
tui = "0.19.0"
unicode-width = "0.1.10"
