[package]
name = "reloading_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-server = "0.6.0"
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower-livereload = { workspace = true }
walkdir = "2.4.0"
